# remotepc

./: README.md
darknet_ros/config/: yolov3-tiny.yaml
darknet_ros/config/cfg/: yolov2-tiny.cfg
darknet_ros/config/config/: yolov2-tiny.yaml
darknet_ros/config/include/darknet_ros/: YoloObjectDetector.hpp
darknet_ros/config/launch/: darknet_ros.launch  yolo_v3.launch
darknet_ros/config/src/: YoloObjectDetector.cpp
darknet_ros_msgs/: CMakeLists.txt  package.xml
darknet_ros_msgs/action/: CheckForObjects.action
od_postprocess/: CMakeLists.txt  package.xml
od_postprocess/msg/: Alert.msg
od_postprocess/src/: alert.cpp
